kubernetes/main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drospect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drospect
  template:
    metadata:
      labels:
        app: drospect
    spec:
      serviceAccountName: gcr-access-sa
      containers:
        - name: drospect
          image: gcr.io/solar-panel-detection-1/solar-panel-web-be:latest
          ports:
            - containerPort: 8080
