kubernetes/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drospect-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: drospect
